refactored: setProperty function in layout | fixed: mobile page scroll jumping because of vh height property

--- a/src/sections/banner/banner.module.scss
+++ b/src/sections/banner/banner.module.scss
@@ -5,7 +5,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    // height: calc(var(--banner-height, 1vh) * 100);
+    height: calc(var(--banner-height) * 100);
     background: var(--theme-gradient);
 }
 
